syntax = "proto3";

option csharp_namespace = "Mercury.Engine.API.Services";

package login;

// The message service definition.
service Login {
    rpc RequestLogin (LoginRequest) returns (LoginReply);
  }
  
  // The request message containing the user's name.
  message LoginRequest {
    string userEmail = 1;
    string userName = 2;
  }
  
  // The response message containing the greetings.
  message LoginReply {
    int32 userId = 1;
  }